# serializejson

./: .gitignore  .hgignore  CHANGELOG.md  CHANGELOG.rst  LICENSE-APACHE.rst  LICENSE-PATRON.rst  LICENSE-PROSPERITY.rst  LICENSE.md  LICENSE.rst  LICENSE.txt  README.md  README.rst  __init__.py  create_venv.bat  create_venv_baptiste.bat  make.bat  my_list.json  remove_pyc_files.bat  requirements.txt  requirements_numpy.txt  setup.cfg  setup.py  test_serialize.py  virtual_environement_create_with_pipy_org.bat  virtual_environement_create_with_requirements.bat  virtual_environement_create_with_requirements_numpy.bat  virtual_environement_create_with_setup_py.bat  virtual_environement_create_with_test_pipy_org.bat
.github/workflows/: python-package.yml  python-publish.yml
SmartFramework/: __init__.py
SmartFramework/files/: __init__.py
SmartFramework/image/: image_conversion.py
SmartFramework/serialize/: __init__.py  serializeQt.py  serializeQt.py.bak
SmartFramework/tools/: dictionnaires.py  objects.py  objects.py.bak
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_modules/: index.html  serializejson.html
docs/_sources/: index.rst.txt
docs_source/: conf.py  index.rst
documentation/: conf.py  index.rst  serializejson.rst
objects/: init_args.py  no_init.py  no_init_slots.py
objects/others/: init_args_filtered_state_explicite_getstate.py  init_default_explicite_getstate.py  init_default_filtered_state_explicite_getstate.py  init_default_ghost_getinitargs.py  init_kwargs_filtered_state_explicite_getstate.py
rapidjson/: CHANGES.rst  CMakeLists.txt  MANIFEST.in  QtCreator_instructions.txt  README.rst  allocators.h  document.h  memorybuffer.h  pointer.h  prettywriter.h  pybytesbuffer.h  pywritestreamwrapper.h  rapidjson.cpp  requirements-test.txt  requirements.txt  serializejson.h  setup.cfg  setup.py  stringbuffer.h  writer.h
rapidjson/error/: error.h
rapidjson/internal/: meta.h
rapidjson/python_rapidjson.egg-info/: PKG-INFO  SOURCES.txt
scripts/: clean.bat  create_wheel.bat  create_wheel_and_push_on_test_pipy_org.bat  push_on_test_pipy_org.bat  remove_pyc_files.bat  virtual_environement_activate.bat  virtual_environement_create.bat  virtual_environement_create_with_local_requirements.bat  virtual_environement_create_with_local_requirements_and_pyqt.bat  virtual_environement_create_with_local_setup.bat  virtual_environement_create_with_local_setup_dev.bat  virtual_environement_create_with_local_setup_test.bat  virtual_environement_create_with_local_wheel.bat  virtual_environement_create_with_pipy_org.bat  virtual_environement_create_with_requirements.bat  virtual_environement_create_with_requirements_numpy.bat  virtual_environement_create_with_setup_py.bat  virtual_environement_create_with_test_pipy_org.bat
serialized/: dumps_times.json  loads_times.json  pickle.txt  serializejson.txt
serializejson/: __init__.py  b64.py  serialize_parameters.py  serializejson.py  simple_exemple.py  tools.py
serializejson/plugins/: PyQt5.py  PySide2.py  __init__.py  builtins.py  datetime.py  module_name.py  my_module.py  numpy.py  qtpy.py  serializejson_PyQt5_PySide2.py  serializejson_array.py  serializejson_datetime.py  serializejson_numpy.py
source/: conf.py  index.rst
tests/: simple_exemple.py  simple_exemple_update.py  test_iterator.py  test_serialize.py  test_serialize_vs_pickle.py
tests/objects/: basic_objects.py  dict_subclasses.py  getstate_no_string_keys.py  init_and_new.py  (+32 more)
(+65 files in other folders)
