[pep8]
ignore = E226,E302,E41
max-line-length = 120

[flake8]
exclude = .git,*migrations*,python_venv,build
max-line-length = 120
inline-quotes = double
ignore = E203,W503 E501 D102 D103 D107 D205 D400

[metadata]
name = serializejson
version = 0.0.1
description = A python library for fast serialization (and deserialization) of complex Python objects into JSON.
long_description = file: README.md
long_description_content_type = text/markdown
author = Baptiste de La Gorce
author_email = baptiste.delagorce@smartaudiotools.com
url = https://github.com/SmartAudioTools/serializejson
download_url = https://github.com/SmartAudioTools/serializejson/tarball/master
keywords = pickle json serialize dump dumps rapidjson base64
license = file: LICENCE.txt

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	pybase64
	python-rapidjson

[options.packages.find]
exclude = tests

[options.extras_require]
test = 
    apply
    numpy

[bdist_wheel]
universal = 1