[flake8]
exclude = .hg,.git,python_venv,build
max-line-length = 120
inline-quotes = double
ignore = E203 W503 E501 D102 D103 D107 D205 D400

;[metadata]
;name = serializejson
;description = A python library for fast serialization (and deserialization) of complex Python objects into JSON.
;long_description = file: README.md
;long_description_content_type = text/markdown
;author = Baptiste de La Gorce
;author_email = baptiste.delagorce@smartaudiotools.com
;url = https://github.com/SmartAudioTools/serializejson
;project_urls =
;    Bug Tracker = https://github.com/SmartAudioTools/serializejson/issues
;    Documentation = https://serializejson.readthedocs.io
;    Source Code = https://github.com/SmartAudioTools/serializejson
;download_url = https://github.com/SmartAudioTools/serializejson/tarball/master
;keywords = 
;    pickle
;    json
;    serialize
;    dump
;    dumps
;    rapidjson
;    base64
;license = MIT
;license-file = LICENSE.txt
;classifiers= 
;    Development Status :: 3 - Alpha
;    Intended Audience :: Developers
;    License :: OSI Approved :: MIT License
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.7
;python_requires = >=3


;[options]
;packages = find:
;include_package_data = True
;zip_safe = False
;install_requires =
;	pybase64
;	python-rapidjson
;   apply
;   blosc

;[options.packages.find]
;exclude = tests

;[options.extras_require]
;test = 
;    pytest
;    numpy
;dev = 
;    pytest
;    numpy
;    qtpy
;    PyQt5
;[bdist_wheel]
;universal = 0